# stm32f0xx

./: Cargo.toml  README.md  gen-peripherals.sh
resources/: STM32F0xx.svd
src/: lib.rs
